# PokemonGallaecia

./: .gitignore  README.md  cfg.py  database.db  gallaecia.png.import  ground_grass_small.png.import  project.godot
learn-rust-with-godot/: Cargo.toml
learn-rust-with-godot/src/: hello_godot.rs  lib.rs  login_screen.rs
rust/: .gitignore  Cargo.toml  autocompiler.py
rust/src/: consts.rs  future.rs  game.rs  lib.rs  login_screen.rs  player.rs  utils.rs
rust/src/extra/: oldies_but_goldies.rs
rust/src/game/: area_scene_switcher.rs  city.rs  code_abstractions.rs  dialogue_box.rs  game.rs  game_elements.rs  grass_step_effect.rs  landing_dust_effect.rs  map.rs  mod.rs  player.rs  pokemon.rs  pokemon_database.rs  pokemon_specie.rs  tall_grass.rs
rust/src/game/character/: animation.rs  character.rs  direction.rs  mod.rs  player.rs  status.rs
rust/src/game/effects/: grass_step_effect.rs  mod.rs  tall_grass.rs
rust/src/game/menu/: menu.rs
rust/src/game/player/: mod.rs  player.rs  player_direction.rs  (+1 more)
rust/src/game_client/: login_screen.rs
rust/src/utils/: consts.rs  mod.rs  networking.rs  utils.rs
rust/src_legacy_depr/extra/: oldies_but_goldies.rs
rust/src_legacy_depr/game/: area_scene_switcher.rs  city.rs  code_abstractions.rs  dialogue_box.rs  game.rs  grass_step_effect.rs  landing_dust_effect.rs  map.rs  mod.rs  player.rs  pokemon.rs  pokemon_database.rs  pokemon_specie.rs  tall_grass.rs
rust/src_legacy_depr/game_client/: gamer.rs  login_screen.rs  mod.rs
rust/src_legacy_depr/utils/: all_pokemon_species.rs  mod.rs  networking.rs  utils.rs
(+1533 files in other folders)
