[package]
name = "learn_rust_with_godot"
version = "0.1.0"
authors = ["Pyzyryab <68871459+Pyzyryab@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
gdnative = "0.9"