[package]
name = "pokemon_gallaecia"
version = "0.1.0"
authors = ["Pyzyryab <68871459+Pyzyryab@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
gdnative = "0.9"

serde = { version = "1", features = ["derive"] }
serde_json = "1"