[package]
name = "pokemon_gallaecia"
version = "0.1.0"
authors = ["Pyzyryab <68871459+Pyzyryab@users.noreply.github.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
godot = { git = "https://github.com/godot-rust/gdext", branch = "master" }

serde = { version = "1.0.93", features = ["derive"] }
serde_json = "1.0.108"

chrono = { version = "0.4", features = ["serde", "rustc-serialize"] }
